# astral-cli

./: main.py  pyproject.toml
core/: cb_prompt.py  prompt.py  symbols.py
src/: cb_prompt.py  colors.py  constants.py  prompt.py  symbols.py
